--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
         }
         stage('Build') {
             steps {
+                bat 'cd backend'
                 bat "mvn clean package"
                 
 
