--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -25,8 +25,9 @@ pipeline {
         }
         stage('Build') {
             steps {
-                bat 'cd backend'
-                bat "mvn clean package"
+                dir('backend'){
+                    bat "mvn clean package"
+                }
                 
 
             }
