--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
         stage('Copy to DEV') {
             steps {
                 dir('backend'){
-                    bat "xcopy target\\${WAR_NAME} ${TARGET_DIR_FOR_DEV}"
+                    bat "xcopy -f -r target\\${WAR_NAME} ${TARGET_DIR_FOR_DEV}"
                 }
             }
         }
