--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,5 +4,7 @@ services:
   tomcat:
     build:
       context: ./backend
+    environment:
+      - JAVA_OPTS=-Xms512m -Xmx1024m -Dspring.profiles.active=qa
     ports:
       - "9090:8080"
