--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
         }
         stage('Deploy'){
             steps{
-                bat "docker-compose up --build"
+                bat "docker-compose up -d --build"
             }
         }
         // stage('Copy to DEV') {
