--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -56,7 +56,9 @@ pipeline {
         }
         stage('Approve for QA'){
             steps{
-                input message:'Approve build to QA?'
+                script{
+                    input message:'Approve build to QA?'
+                }
             }
         }
         stage('Deploy to QA on Docker'){
