--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
+server.servlet.session.timeout=15m
 # H2 (In-Memory)
 spring.datasource.url=jdbc:h2:file:./data/journal
 spring.datasource.driver-class-name=org.h2.Driver
