--- a/backend/src/main/resources/application-qa.properties
+++ b/backend/src/main/resources/application-qa.properties
@@ -1,3 +1,4 @@
+server.servlet.session.timeout=15m
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/journal
 spring.datasource.username=postgres
