--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -64,7 +64,7 @@ pipeline {
         stage('Start Docker') {
             steps {
                 script {
-                    bat 'net start docker'
+                    bat 'net start com.docker.service'
                 }
             }
         }
