--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -76,13 +76,13 @@ pipeline {
         }
     }
     
-    // stage('Docker Compose Down') {
-    //   steps {
-    //     script {
-    //       bat 'docker-compose down'
-    //     }
-    //   }
-    // }
+    stage('Docker Compose Down') {
+      steps {
+        script {
+          bat 'docker-compose down'
+        }
+      }
+    }
     }
     post{
         success {
