--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
-server.servlet.session.timeout=15m
+security.jwt.secret-key=${JWT_SECRET_KEY:none}
+security.jwt.expiration-time=${JWT_EXP_TIME:100000}
 # H2 (In-Memory)
 spring.datasource.url=jdbc:h2:file:./data/journal
 spring.datasource.driver-class-name=org.h2.Driver
@@ -13,3 +14,5 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+
