--- a/backend/src/main/resources/application-qa.properties
+++ b/backend/src/main/resources/application-qa.properties
@@ -1,4 +1,5 @@
-server.servlet.session.timeout=15m
+security.jwt.secret-key=${JWT_SECRET_KEY:none}
+security.jwt.expiration-time=${JWT_EXP_TIME:100000}
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/journal
 spring.datasource.username=postgres
