--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
         }
         stage('Quality Gate'){
             steps{
-                timeOut(time:2,unit:'MINUTES'){
+                timeout(time:2,unit:'MINUTES'){
                     waitForQualityGate abortPipeline:true
                 }
             }
