--- a/backend/src/main/resources/application-qa.properties
+++ b/backend/src/main/resources/application-qa.properties
@@ -2,8 +2,8 @@ security.jwt.secret-key=${JWT_SECRET_KEY:none}
 security.jwt.expiration-time=${JWT_EXP_TIME:100000}
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/journal
-spring.datasource.username=postgres
-spring.datasource.password=toor
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
