--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -30,6 +30,8 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -95,6 +97,7 @@
 			<artifactId>spring-dotenv</artifactId>
 			<version>4.0.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
