--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -31,6 +31,21 @@
 	<properties>
 		<java.version>17</java.version>
 
+		<sonar.host.url>http://localhost:9000</sonar.host.url>
+		<sonar.organization>your-organization</sonar.organization>
+		<sonar.projectKey>com.developer:journal</sonar.projectKey>
+		<sonar.projectName>Journal</sonar.projectName>
+		<sonar.projectVersion>1.0</sonar.projectVersion>
+
+		<sonar.sources>src/main/java</sonar.sources>
+		<sonar.tests>src/test/java</sonar.tests>
+
+		<sonar.language>java</sonar.language>
+		<sonar.java.binaries>target/classes</sonar.java.binaries>
+		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+
+
+		<sonar.token>squ_902a778bbe6b38c3a6aebb0c7a79a4b8f4b6a200</sonar.token>
 
 	</properties>
 	<dependencies>
