--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ JWT_EXP_TIME=300000
 
 POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=toor
+
+SONAR_TOKEN=squ_902a778bbe6b38c3a6aebb0c7a79a4b8f4b6a200
