--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -5,6 +5,12 @@ pipeline {
         TARGET_DIR_FOR_DEV='C:\\apache-tomcat-11.0.8-windows-x64\\Tomcat11-DEV\\webapps'
         TARGET_DIR_FOR_QA='C:\\apache-tomcat-11.0.8-windows-x64\\Tomcat11-QA\\webapps'
         WAR_NAME='journal.war'
+        JWT_SECRET_KEY=credentials('jwt-secret-key-1')
+        JWT_EXP_TIME=300000
+        POSTGRES_CREDENTIALS=credentials('postgres')
+        POSTGRES_USERNAME=POSTGRES_CREDENTIALS_USR
+        POSTGRES_PASSWORD=POSTGRES_CREDENTIALS_PSW
+
     }
     parameters {
         string(name: 'GIT_CREDENTIALS_ID', defaultValue: 'github-token', description: 'Jenkins GitHub credentials ID')
@@ -104,13 +110,13 @@ pipeline {
         }
     }
     
-    stage('Docker Compose Down') {
-      steps {
-        script {
-          bat 'docker-compose down'
-        }
-      }
-    }
+//     stage('Docker Compose Down') {
+//       steps {
+//         script {
+//           bat 'docker-compose down'
+//         }
+//       }
+//     }
     }
     post{
         success {
