--- a/backend/src/main/resources/application-qa.properties
+++ b/backend/src/main/resources/application-qa.properties
@@ -1,5 +1,5 @@
 security.jwt.secret-key=${JWT_SECRET_KEY:none}
-security.jwt.expiration-time=${JWT_EXP_TIME:100000}
+security.jwt.expiration-time=300000
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/journal
 spring.datasource.username=${POSTGRES_USERNAME}
