--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,5 +4,5 @@ server.port=9090
 
 spring.profiles.active=dev
 security.jwt.secret-key=${JWT_SECRET_KEY:none}
-security.jwt.expiration-time=${JWT_EXP_TIME:100000}
+security.jwt.expiration-time=300000
 logging.level.root=INFO
