--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 security.jwt.secret-key=${JWT_SECRET_KEY:none}
-security.jwt.expiration-time=${JWT_EXP_TIME:100000}
+security.jwt.expiration-time=300000
 # H2 (In-Memory)
 spring.datasource.url=jdbc:h2:file:./data/journal
 spring.datasource.driver-class-name=org.h2.Driver
