--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
     
     environment{
-        TARGET_DIR_FOR_DEV='C:\\apache-tomcat-11.0.8-windows-x64\\Tomcat11-DEV\\webapps'
+        TARGET_DIR_FOR_DEV='C:\\apache-tomcat-11.0.8-windows-x64\\Tomcat11-DEV'
         TARGET_DIR_FOR_QA='C:\\apache-tomcat-11.0.8-windows-x64\\Tomcat11-QA\\webapps'
         WAR_NAME='journal.war'
         JWT_SECRET_KEY=credentials('jwt-secret-key-1')
@@ -77,7 +77,7 @@ pipeline {
         stage('Copy to DEV') {
             steps {
                 dir('backend'){
-                    bat "xcopy /Y target\\${WAR_NAME} ${TARGET_DIR_FOR_DEV}"
+                    bat "xcopy /Y target\\${WAR_NAME} ${TARGET_DIR_FOR_DEV}\\webapps"
                 }
             }
         }
