--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -120,7 +120,12 @@
 
 	<build>
 		<finalName>journal</finalName>
-
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
