--- a/backend/src/main/resources/application-qa.properties
+++ b/backend/src/main/resources/application-qa.properties
@@ -1,4 +1,4 @@
-security.jwt.secret-key=${JWT_SECRET_KEY:none}
+security.jwt.secret-key=${JWT_SECRET_KEY:null}
 security.jwt.expiration-time=300000
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/journal
