--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -7,8 +7,8 @@ pipeline {
         WAR_NAME='journal.war'
         JWT_SECRET_KEY=credentials('jwt-secret-key-1')
         POSTGRES_CREDENTIALS=credentials('postgres')
-        POSTGRES_USERNAME="${POSTGRES_CREDENTIALS_USR}"
-        POSTGRES_PASSWORD="${POSTGRES_CREDENTIALS_PSW}"
+        postgres.username="${POSTGRES_CREDENTIALS_USR}"
+        postgres.password="${POSTGRES_CREDENTIALS_PSW}"
 
     }
     parameters {
@@ -88,8 +88,8 @@ bat """
 (
 echo set JAVA_OPTS=-Dspring.profiles.active=qa ^
  -Dsecurity.jwt.secret-key=%JWT_SECRET_KEY% ^
- -DPOSTGRES_USERNAME=postgres ^
- -DPOSTGRES_PASSWORD=toor 
+ -Dpostgres.username=postgres ^
+ -Dpostgres.password=toor 
 ) > "%TARGET_DIR_FOR_DEV%\\bin\\setenv.bat"
 """
 
