--- a/backend/src/main/resources/application-qa.properties
+++ b/backend/src/main/resources/application-qa.properties
@@ -1,9 +1,9 @@
-security.jwt.secret-key=${JWT_SECRET_KEY:null}
+#security.jwt.secret-key=${JWT_SECRET_KEY:null}
 security.jwt.expiration-time=300000
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/journal
-spring.datasource.username=${POSTGRES_USERNAME}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.username=${postgres.username}
+spring.datasource.password=${postgres.password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
