--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-
+security.jwt.secret-key=${security.jwt.secret-key}
 security.jwt.expiration-time=300000
 # H2 (In-Memory)
 spring.datasource.url=jdbc:h2:file:./data/journal
