--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=journal
 server.port=9090
 
-security.jwt.secret-key=${security.jwt.secret-key}
+security.jwt.secret-key=${jwt.secret}
 security.jwt.expiration-time=300000
 spring.profiles.active=dev
 logging.level.root=INFO
