--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -86,9 +86,7 @@ pipeline {
                
 bat """
 (
-echo off
-set JWT_SECRET_KEY=${JWT_SECRET_KEY}
-set JAVA_OPTS=-Dspring.profiles.active=dev ^
+echo set JAVA_OPTS=-Dspring.profiles.active=dev ^
  -Djwt.secret=%JWT_SECRET_KEY% ^
  -Dpostgres.username=%POSTGRES_USERNAME% ^
  -Dpostgres.password=%POSTGRES_PASSWORD% 
