--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-security.jwt.secret-key=${security.jwt.secret-key}
+security.jwt.secret-key=${JWT_SECRET_KEY}
 # H2 (In-Memory)
 spring.datasource.url=jdbc:h2:file:./data/journal
 spring.datasource.driver-class-name=org.h2.Driver
