--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,6 @@ services:
     build:
       context: ./backend
     environment:
-      - JAVA_OPTS=-Xms512m -Xmx1024m -Dspring.profiles.active=qa -DPOSTGRES_USERNAME=postgres \
-        -DPOSTGRES_PASSWORD=toor
+      - JAVA_OPTS=-Xms512m -Xmx1024m -Dspring.profiles.active=qa -DPOSTGRES_USERNAME=postgres -DPOSTGRES_PASSWORD=toor
     ports:
       - "8083:8080"
