--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=journal
 server.port=9090
-spring.profiles.active=dev
+spring.profiles.active=qa
 security.jwt.secret-key=${JWT_SECRET_KEY:default-secret}
 security.jwt.expiration-time=300000
 
