--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,11 @@ services:
     build:
       context: ./backend
     environment:
-      - JAVA_OPTS=-Xms512m -Xmx1024m -Dspring.profiles.active=qa -DPOSTGRES_USERNAME=postgres -DPOSTGRES_PASSWORD=toor
+      JAVA_OPTS: >
+        -Xms512m -Xmx1024m
+        -Dspring.profiles.active=qa
+        -DPOSTGRES_URL=jdbc:postgresql://host.docker.internal:5432/journal
+        -DPOSTGRES_USERNAME=postgres
+        -DPOSTGRES_PASSWORD=toor
     ports:
       - "8083:8080"
