--- a/backend/src/main/resources/application-qa.properties
+++ b/backend/src/main/resources/application-qa.properties
@@ -1,8 +1,8 @@
 
 # PostgreSQL
-spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/journal}
-spring.datasource.username=${POSTGRES_USERNAME:postgres}
-spring.datasource.password=${POSTGRES_PASSWORD:toor}
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
