--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=journal
 server.port=9090
 spring.profiles.active=dev
-security.jwt.secret-key=${JWT_SECRET_KEY:default-secret}
+security.jwt.secret-key=default-secret
 security.jwt.expiration-time=300000
 
 logging.level.root=INFO
