--- a/backend/src/main/resources/application-qa.properties
+++ b/backend/src/main/resources/application-qa.properties
@@ -1,4 +1,4 @@
-
+security.jwt.secret-key=${JWT_SECRET_KEY}
 # PostgreSQL
 spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/journal}
 spring.datasource.username=${POSTGRES_USERNAME}
