--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -1,149 +1,159 @@
 pipeline {
-    agent any
-    
-    environment{
-        TARGET_DIR_FOR_DEV='C:\\apache-tomcat-11.0.8-windows-x64\\Tomcat11-DEV'
-        TARGET_DIR_FOR_QA='C:\\apache-tomcat-11.0.8-windows-x64\\Tomcat11-QA'
+    agent { label 'slave1' }  // Make sure this matches your Linux node label
+
+    environment {
+        TARGET_DIR_FOR_DEV='/opt/tomcat/Tomcat11-DEV'
+        TARGET_DIR_FOR_QA='/opt/tomcat/Tomcat11-QA'
         WAR_NAME='journal.war'
-        JWT_SECRET_KEY=credentials('jwt-secret-key-1')
-        POSTGRES_CREDENTIALS=credentials('postgres')
-
-
+        JWT_SECRET_KEY = credentials('jwt-secret-key-1')
+        POSTGRES_CREDENTIALS = credentials('postgres')
     }
+
     parameters {
         string(name: 'GIT_CREDENTIALS_ID', defaultValue: 'github-token', description: 'Jenkins GitHub credentials ID')
     }
 
     stages {
-        stage('Clone'){
-            steps{
+        stage('Clone') {
+            steps {
                 checkout scmGit(
-                    branches: [[name: '*/main']], // or your desired branch, e.g., '*/master'
+                    branches: [[name: '*/main']],
                     extensions: [],
                     userRemoteConfigs: [[
-                        credentialsId: "${params.GIT_CREDENTIALS_ID}", // ID of your Jenkins credentials
-                        url: 'https://github.com/RajG98/journal-app.git' // Replace with your repository URL
+                        credentialsId: "${params.GIT_CREDENTIALS_ID}",
+                        url: 'https://github.com/RajG98/journal-app.git'
                     ]]
                 )
-                
             }
         }
+
         stage('Test') {
             steps {
-                dir('backend'){
-                    bat "mvn clean test -Dsecurity.jwt.secret-key=%JWT_SECRET_KEY%"
+                dir('backend') {
+                    sh 'mvn clean test -Dsecurity.jwt.secret-key=$JWT_SECRET_KEY'
                 }
             }
-            post{
-                always{
-                    dir('backend'){
+            post {
+                always {
+                    dir('backend') {
                         junit '**/target/surefire-reports/TEST-*.xml'
                     }
                 }
             }
         }
+
         stage('Build') {
             steps {
-                dir('backend'){
-                    bat "mvn package -DskipTests -Dsecurity.jwt.secret-key=%JWT_SECRET_KEY%"
+                dir('backend') {
+                    sh 'mvn package -DskipTests -Dsecurity.jwt.secret-key=$JWT_SECRET_KEY'
                 }
             }
         }
-        stage('SonarQube Analysis'){
-            steps{
-                withSonarQubeEnv(installationName: 'sq1') {
-                    dir('backend'){
-                        bat 'mvn sonar:sonar'
+
+        stage('SonarQube Analysis') {
+            steps {
+                withSonarQubeEnv('sq1') {
+                    dir('backend') {
+                        sh 'mvn sonar:sonar'
                     }
                 }
             }
         }
-        stage('Quality Gate'){
-            steps{
-                timeout(time:2,unit:'MINUTES'){
-                    waitForQualityGate abortPipeline:true
+
+        stage('Quality Gate') {
+            steps {
+                timeout(time: 2, unit: 'MINUTES') {
+                    waitForQualityGate abortPipeline: true
                 }
             }
         }
-        stage('Stop Tomcat'){
-            steps{
-                catchError(buildResult: 'SUCCESS', stageResult: 'UNSTABLE'){ 
-                    bat "sc stop Tomcat11-DEV"
-                    bat 'timeout /t 10 /nobreak >nul'
+
+        stage('Stop Tomcat') {
+            steps {
+                catchError(buildResult: 'SUCCESS', stageResult: 'UNSTABLE') {
+                    sh 'sudo systemctl stop tomcat11-dev || true'
+                    sh 'sleep 10'
                 }
             }
         }
+
         stage('Copy to DEV') {
             steps {
-                dir('backend'){
-                    bat "xcopy /Y target\\${WAR_NAME} ${TARGET_DIR_FOR_DEV}\\webapps"
+                dir('backend') {
+                    sh "cp target/${WAR_NAME} ${TARGET_DIR_FOR_DEV}/webapps/"
                 }
             }
         }
+
         stage('Prepare Tomcat Env') {
             steps {
-               script {
-                def setenvContent = """
-                @echo off
-                set JWT_SECRET_KEY=${JWT_SECRET_KEY}
-                set JAVA_OPTS=%JAVA_OPTS% -DJWT_SECRET_KEY=%JWT_SECRET_KEY%
-                """
+                script {
+                    def setenvContent = """
+                    export JWT_SECRET_KEY=${JWT_SECRET_KEY}
+                    export JAVA_OPTS="\$JAVA_OPTS -DJWT_SECRET_KEY=\$JWT_SECRET_KEY"
+                    """
 
-                writeFile file: "${TARGET_DIR_FOR_DEV}\\bin\\setenv.bat", text: setenvContent
-                echo "✅ Generated setenv.bat"
-
-               }
+                    writeFile file: "${TARGET_DIR_FOR_DEV}/bin/setenv.sh", text: setenvContent
+                    sh "chmod +x ${TARGET_DIR_FOR_DEV}/bin/setenv.sh"
+                    echo "✅ Generated setenv.sh"
+                }
             }
         }
 
         stage('Start Tomcat') {
             steps {
-                
-                bat "sc start Tomcat11-DEV"
+                sh 'sudo systemctl start tomcat11-dev'
             }
         }
-        stage('Approve for QA'){
-            steps{
-                script{
-                    input message:'Approve build to QA?-(Start Docker Desktop before proceeding)'
+
+        stage('Approve for QA') {
+            steps {
+                script {
+                    input message: 'Approve build to QA? (Start Docker engine before proceeding)'
                 }
             }
         }
 
-        stage('Deploy to QA on Docker'){
-            steps{
-                bat'''
-                JWT_SECRET_KEY=${JWT_SECRET_KEY} \
-                POSTGRES_URL=jdbc:postgresql://localhost:5432/db \
-                POSTGRES_USERNAME="${POSTGRES_CREDENTIALS_USR}" \
-                POSTGRES_PASSWORD="${POSTGRES_CREDENTIALS_PSW}" \
-                docker-compose -f docker-compose.yml up -d --build
-                '''
+        stage('Deploy to QA on Docker') {
+            steps {
+                withCredentials([
+                    string(credentialsId: 'jwt-secret-key-1', variable: 'JWT_SECRET_KEY'),
+                    usernamePassword(credentialsId: 'postgres', usernameVariable: 'POSTGRES_CREDENTIALS_USR', passwordVariable: 'POSTGRES_CREDENTIALS_PSW')
+                ]) {
+                    sh '''
+                        export JWT_SECRET_KEY=$JWT_SECRET_KEY
+                        export POSTGRES_URL=jdbc:postgresql://localhost:5432/db
+                        export POSTGRES_USERNAME=$POSTGRES_CREDENTIALS_USR
+                        export POSTGRES_PASSWORD=$POSTGRES_CREDENTIALS_PSW
+                        docker-compose -f docker-compose.yml up -d --build
+                    '''
+                }
             }
         }
+
         stage('Wait and Test') {
-        steps {
-            catchError(buildResult: 'SUCCESS', stageResult: 'UNSTABLE'){ 
-            bat 'timeout /t 10 /nobreak >nul'
-            bat 'curl -f http://localhost:8083 || echo "App did not start properly"'
+            steps {
+                catchError(buildResult: 'SUCCESS', stageResult: 'UNSTABLE') {
+                    sh 'sleep 10'
+                    sh 'curl -f http://localhost:8083 || echo "App did not start properly"'
+                }
             }
         }
+
+        // Uncomment if needed
+        // stage('Docker Compose Down') {
+        //     steps {
+        //         sh 'docker-compose down'
+        //     }
+        // }
     }
-    
-//     stage('Docker Compose Down') {
-//       steps {
-//         script {
-//           bat 'docker-compose down'
-//         }
-//       }
-//     }
-    }
-    post{
+
+    post {
         success {
-            echo 'Pipeline successfully completed'
+            echo '✅ Pipeline successfully completed'
         }
-        failure{
-            echo 'Pipeline failed'
+        failure {
+            echo '❌ Pipeline failed'
         }
     }
 }
