--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -30,6 +30,7 @@ pipeline {
         stage('Test') {
             steps {
                 dir('backend') {
+                    sh 'chmod +x mvnw'
                     sh './mvnw clean test -Dsecurity.jwt.secret-key=$JWT_SECRET_KEY'
                 }
             }
